<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.FinishActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolobar_finish_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        />
    <TextView
        android:id="@+id/tvEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/end"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="35sp"/>

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/item_circular_color_accent_border"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/image"
            android:src="@drawable/tick"
            />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/congratulation"
        android:layout_gravity="center"
        android:textColor="#212121"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/you_have_finished_the_workout"
        android:layout_gravity="center"
        android:textColor="#212121"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/finish"
        android:textColor="#FFFFFF"
        android:textSize="18sp"/>





</LinearLayout>