<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ExerciseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_exercise_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorWhite"
        android:theme="@style/ToolbarTheme"
        app:titleTextColor="@color/colorPrimary"/>

    <LinearLayout
        android:id="@+id/llRestView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_exercise_activity"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_ready_for"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/item_circular_color_accent_border">

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/cicular_progress_gray"
                android:indeterminate="false"
                android:max="10"
                android:progress="100"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:rotation="-90"/>

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/item_circular_color_accent_background"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:text="10"/>
            </LinearLayout>


        </FrameLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/upcoming_exercise"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvUpcomingExerciseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="#212121"
            android:textStyle="bold"
            android:text="@string/exercise_name"
            android:textSize="22sp"/>





    </LinearLayout>

    <LinearLayout
        android:id="@+id/llExerciseView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_exercise_activity"
        android:gravity="center"
        android:layout_above="@+id/rvExercseStatus"
        android:orientation="vertical"
        android:visibility="invisible">
        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/image"
            android:scaleType="fitXY"
            android:src="@drawable/ic_jumping_jacks"
            />
        <TextView
            android:id="@+id/tvExerciseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_name"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/item_circular_color_accent_border">

            <ProgressBar
                android:id="@+id/progressBarExercise"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/cicular_progress_gray"
                android:indeterminate="false"
                android:max="30"
                android:progress="100"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:rotation="-90"/>

            <LinearLayout
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="@drawable/item_circular_color_accent_background"
                android:gravity="center">

                <TextView
                    android:id="@+id/ExerciseTvTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:text="10"/>
            </LinearLayout>


        </FrameLayout>



    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExercseStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"/>


</RelativeLayout>