<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BMIactivity">

    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_bmi_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="#FFFFFF"/>

    <RadioGroup
        android:id="@+id/rgUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_bmi_activity"
        android:layout_margin="10dp"
        android:background="@drawable/drawable_radio_button_background"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rbMetricUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.50"
            android:background="@drawable/drawanle_units_tab_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="METRIC UNITS"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <RadioButton
            android:id="@+id/rbUsUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.50"
            android:background="@drawable/drawanle_units_tab_selector"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="US UNITS"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </RadioGroup>

    <LinearLayout
        android:id="@+id/llUnitsView"
        android:layout_below="@+id/rgUnits"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiMetricUnitWeight"
            app:hintTextColor="@color/colorAccent"
            app:boxStrokeColor="@color/colorAccent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMetricUnitWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_in_kg"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="2dp"
            android:id="@+id/tiMetricUnitHeight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            app:boxStrokeColor="@color/colorAccent"
            app:hintTextColor="@color/colorAccent"

            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMetricUnitHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Height_in_kg"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiUSUnitWeight"
            app:hintTextColor="@color/colorAccent"
            app:boxStrokeColor="@color/colorAccent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etUSUnitWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_in_lbs"
                android:inputType="numberDecimal"
                android:textSize="16sp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/llUSUnitsHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="2dp"
                android:id="@+id/tilUSUnitHeightFeet"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                app:boxStrokeColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etUSUnitHeightFeet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Height_in_feet"
                    android:inputType="number"
                    android:textSize="16sp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="2dp"
                android:id="@+id/tilUSUnitHeightInch"
                android:layout_marginStart="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_weight="1"
                app:boxStrokeColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent"

                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etUSUnitHeightInch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Height_in_inch_"
                    android:inputType="number"
                    android:textSize="16sp"
                    />

            </com.google.android.material.textfield.TextInputLayout>




        </LinearLayout>



        <LinearLayout
            android:id="@+id/llDisplayBMIResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:visibility="invisible"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tvYourBMI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:text="YOUR BMI"
                android:textAllCaps="true"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/tvBMIValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="15.00"/>
            <TextView
                android:id="@+id/tvBMIType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textSize="18sp"
                tools:text="Normal"/>
            <TextView
                android:id="@+id/tvBMIDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textSize="18sp"
                tools:text="Normal"/>
        </LinearLayout>
        <Button
            android:id="@+id/btnCalculateUnits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/colorAccent"
            android:text="CALCULATE"
            android:textColor="#FFFFFF"
            android:textSize="18sp"/>

        </LinearLayout>
</RelativeLayout>